--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "kaoi",
+    "name": "Pablo2.0",
     "version": "2.0.0",
     "description": "A fully Object Oriented WhatsApp bot built with TypeScript",
     "main": "dist/kaoi.js",
@@ -12,21 +12,21 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/PrajjwalDatir/Kaoi.git"
+        "url": "git+https://github.com/shubhayu-64/Pablo-2.0.git"
     },
     "keywords": [
         "bot",
         "typescript",
         "whatsapp",
         "whatsapp-botto-void",
-        "kaoi"
+        "Pablo 2.0"
     ],
     "author": "Synthesized Infinity & Prajjwal Datir",
     "license": "AGPL-3.0",
     "bugs": {
-        "url": "https://github.com/PrajjwalDatir/Kaoi/issues"
+        "url": "https://github.com/shubhayu-64/Pablo-2.0/issues"
     },
-    "homepage": "https://github.com/PrajjwalDatir/Kaoi#readme",
+    "homepage": "https://github.com/shubhayu-64/Pablo-2.0#readme",
     "devDependencies": {
         "@types/express": "^4.17.12",
         "@types/fs-extra": "^9.0.11",
